--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
-  <link rel="shortcut icon" type="image/x-ico" href="favicon.ico">
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
