--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,5 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
   <link rel="icon" type="image/png" href="/assets/favicon.png">
+  <img src="/assets/favicon.png" alt="Blog, Linux, Shell Icon" width="512" height="512">
 </head>
