--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,13 @@
 
     {%- include footer.html -%}
 
+    <script>
+      document.querySelectorAll('a').forEach(link => {
+      link.setAttribute('target', '_blank');
+      });
+    </script>
+    
+
   </body>
 
 </html>
