--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@
 
     {%- include footer.html -%}
 
-    <script>
+    <!-- <script>
       document.querySelectorAll('a').forEach(link => {
       link.setAttribute('target', '_blank');
       });
-    </script>
+    </script> -->
     
 
   </body>
